# geojson-cpp

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/maplibre/: geojson.hpp  geojson_impl.hpp  geojson_value_impl.hpp
include/maplibre/geojson/: rapidjson.hpp  value.hpp
src/maplibre/: geojson.cpp
test/: test.cpp  test_value.cpp
